Added map instead of svg on province one

--- a/provinces/province1.html
+++ b/provinces/province1.html
@@ -81,15 +81,7 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-1"/>
-                        <!-- District borders would be added here -->
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Biratnagar, Capital of Koshi Province"/>
-                        <text x="90" y="100" class="capital-label">Biratnagar</text>
-                        <!-- Everest Marker -->
-                        <circle cx="60" cy="40" r="6" class="everest-dot"/>
-                        <text x="70" y="40" class="mountain-label">Mt. Everest</text>
-                    </svg>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1816495.6938409375!2d85.85907465153413!3d27.224070553550863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e8d6deb2163325%3A0xc61e3baae645e361!2sKoshi%20Province!5e0!3m2!1sen!2snp!4v1744557637170!5m2!1sen!2snp" width="1000" height="450" style="border:0;" allowfullscreen="True" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
