--- a/provinces/province4.html
+++ b/provinces/province4.html
@@ -82,14 +82,7 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-4"/>
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Pokhara, Capital of Gandaki"/>
-                        <text x="90" y="100" class="capital-label">Pokhara</text>
-                        <!-- Annapurna Range -->
-                        <path d="M40,60 L60,50 L80,55 L90,45" class="mountain-range" stroke="#FFF" stroke-width="2" fill="none"/>
-                        <text x="60" y="40" class="mountain-label">Annapurna Range</text>
-                    </svg>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1797318.388816115!2d82.71782475135235!3d28.377362514392143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995713cf0b9cf0b%3A0xfa70b278c998bd29!2sGandaki%20Province!5e0!3m2!1sen!2snp!4v1744558402285!5m2!1sen!2snp" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
