Google map integrated

--- a/provinces/province2.html
+++ b/provinces/province2.html
@@ -83,12 +83,9 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-2"/>
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Janakpur, Capital of Madhesh Province"/>
-                        <text x="90" y="100" class="capital-label">Janakpur</text>
-                    </svg>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644695.1205600253!2d80.99150166714522!3d26.86307959751103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ec7e30d31857dd%3A0x4f9ad514f8d97e1!2sMadhesh%20Province!5e0!3m2!1sen!2snp!4v1744559584988!5m2!1sen!2snp"></iframe>
                 </div>
+                <div class="province-note">Red line indicates the border of the province.</div>
             </div>
         </section>
 
