--- a/provinces/province4.html
+++ b/provinces/province4.html
@@ -82,8 +82,9 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1797318.388816115!2d82.71782475135235!3d28.377362514392143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995713cf0b9cf0b%3A0xfa70b278c998bd29!2sGandaki%20Province!5e0!3m2!1sen!2snp!4v1744558402285!5m2!1sen!2snp" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1797318.388816115!2d82.71782475135235!3d28.377362514392143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995713cf0b9cf0b%3A0xfa70b278c998bd29!2sGandaki%20Province!5e0!3m2!1sen!2snp!4v1744558402285!5m2!1sen!2snp"></iframe>
                 </div>
+                <div class="province-note">Red line indicates the border of the province.</div>
             </div>
         </section>
 
