--- a/provinces/province5.html
+++ b/provinces/province5.html
@@ -82,14 +82,8 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-5"/>
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Deukhuri, Capital of Lumbini"/>
-                        <text x="90" y="100" class="capital-label">Deukhuri</text>
-                        <!-- Lumbini marker -->
-                        <circle cx="90" cy="120" r="4" class="landmark-dot" aria-label="Lumbini, Birthplace of Buddha"/>
-                        <text x="100" y="120" class="landmark-label">Lumbini</text>
-                    </svg>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1802110.0455421435!2d81.22402619762356!3d28.093284091359084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3996792b4a4e0281%3A0xc835dc3d3bbe52ea!2sLumbini%20Province!5e0!3m2!1sen!2snp!4v1744559720279!5m2!1sen!2snp"></iframe>
+                    <div class="province-note">Red line indicates the border of the province.</div>
                 </div>
             </div>
         </section>
