--- a/provinces/province6.html
+++ b/provinces/province6.html
@@ -32,6 +32,7 @@
     </style>
 </head>
 <body class="province-6-page">
+    
     <header class="header">
         <div class="flag-colors">
             <div class="crimson"></div>
@@ -82,14 +83,8 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-6"/>
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Birendranagar, Capital of Karnali"/>
-                        <text x="90" y="100" class="capital-label">Birendranagar</text>
-                        <!-- Rara Lake -->
-                        <ellipse cx="60" cy="80" rx="15" ry="8" class="lake" fill="#00BFFF" opacity="0.6" stroke="#003893" stroke-width="1"/>
-                        <text x="60" y="80" class="landmark-label">Rara Lake</text>
-                    </svg>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1781424.9368431815!2d81.01091936999188!3d29.301537007968314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39bcc66413492495%3A0x66deea00d8f5900!2sKarnali%20Province!5e0!3m2!1sen!2snp!4v1744559760910!5m2!1sen!2snp"></iframe>
+                    <div class="province-note">Red line indicates the border of the province.</div>
                 </div>
             </div>
         </section>
