--- a/provinces/province1.html
+++ b/provinces/province1.html
@@ -81,8 +81,9 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1816495.6938409375!2d85.85907465153413!3d27.224070553550863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e8d6deb2163325%3A0xc61e3baae645e361!2sKoshi%20Province!5e0!3m2!1sen!2snp!4v1744557637170!5m2!1sen!2snp" width="1000" height="450" style="border:0;" allowfullscreen="True" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1816495.6938409375!2d85.85907465153413!3d27.224070553550863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e8d6deb2163325%3A0xc61e3baae645e361!2sKoshi%20Province!5e0!3m2!1sen!2snp!4v1744557637170!5m2!1sen!2snp"></iframe>
                 </div>
+                <div class="province-note">Red line indicates the border of the province.</div>
             </div>
         </section>
 
