--- a/provinces/province7.html
+++ b/provinces/province7.html
@@ -82,15 +82,9 @@
                 </div>
                 
                 <div class="province-map-container">
-                    <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg" class="province-svg">
-                        <path d="M50,50 L100,30 L150,70 L130,120 L80,150 L40,100 Z" class="province-shape province-7"/>
-                        <circle cx="80" cy="100" r="5" class="capital-dot" aria-label="Godawari, Capital of Sudurpashchim"/>
-                        <text x="90" y="100" class="capital-label">Godawari</text>
-                        <!-- Shuklaphanta marker -->
-                        <circle cx="70" cy="120" r="4" class="landmark-dot" aria-label="Shuklaphanta National Park"/>
-                        <text x="80" y="120" class="landmark-label">Shuklaphanta</text>
-                    </svg>
+                    <iframe class="province-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3611043.0756460084!2d80.28140526615597!3d27.889411780455355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a1592d570a849b%3A0x882a4b4af3a281e8!2sSudurpashchim%20Province!5e0!3m2!1sen!2snp!4v1744560984652!5m2!1sen!2snp"></iframe>
                 </div>
+                <div class="province-note">Red line indicates the border of the province.</div>
             </div>
         </section>
 
