--- a/index.html
+++ b/index.html
@@ -405,10 +405,8 @@
                             <li><strong>Phone:</strong> 9841384296</li>
                             <li><strong>Email:</strong> birajbh65@gmail.com</li>
                             <li><strong>Address:</strong> Raniban, Kathmandu</li>
-                            <li><strong>College:</strong> Trinity International College</li>
-                            <li><strong>Grade:</strong> XI DB1</li>
                         </ul>
-                        <p>I created this interactive map of Nepal as an educational project to showcase our country's rich geography, cultural heritage, and administrative divisions.</p>
+                        <p>I built this interactive map of Nepal to professionally showcase the country’s geography, cultural heritage, and administrative divisions.</p>
                     </div>
                 </div>
             </div>
@@ -422,9 +420,8 @@
                 <h3>About This Project</h3>
                 <p>An educational interactive map of Nepal created with pure HTML and CSS.</p>
                 <p>This project aims to showcase Nepal's geography, culture, and heritage in an accessible way.</p>
-                <p><strong>Created by:</strong> Biraj Bhattarai, Grade XI DB1</p>
-                <p><strong>College:</strong> Trinity International College</p>
-                <p><strong>Location:</strong> Dillibazar, Kathmandu</p>
+                <p><strong>Created by:</strong> Biraj Bhattarai</p>
+                <p><strong>Location:</strong> Kathmandu, Nepal</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
