Phone no. changed

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <div class="about-me-content">
                         <h3>Biraj Bhattarai</h3>
                         <ul class="about-me-details">
-                            <li><strong>Phone:</strong> 9841384296</li>
+                            <li><strong>Phone:</strong> +9779841384296</li>
                             <li><strong>Email:</strong> birajbh65@gmail.com</li>
                             <li><strong>Address:</strong> Raniban, Kathmandu</li>
                         </ul>
